--- a/css/project.scss
+++ b/css/project.scss
@@ -8,6 +8,7 @@ $color-panel: #336E7B;
 $color-heart: $color-active;
 $color-heart-hover: #D77C7A;
 $color-comment: #EAE8E8;
+$color-border: #D8D8D8;
 
 body{
   width: 100% !important;
@@ -165,11 +166,15 @@ span{
     font-size: 18px;
     background-color: $color-background;
     .project-name{
-      margin: 85px 0px 0px 0px;
-      font-size: 35px;
-      font-family: $font-family-main;
-      font-weight: 300;
+      padding: 65px 0px 60px 0px;
+      font-size: 40px;
+      font-family: $font-geo;
+      font-weight: 400;
       text-align:center;
+      color: $color-main-hover;
+      border-bottom: $color-border;
+      border-bottom-width: 2px;
+      border-bottom-style: solid;
     }
     .project-info{
       .basic-info{
@@ -196,19 +201,22 @@ span{
         .progress-bar-header{
           color: $color-main-hover !important;
           text-align:center;
-          font-size: 20px;
+          font-size: 25px;
+          margin-bottom: 20px;
         }
         .progress{
             border-radius: 0;
+            margin-bottom: 60px;
         }
         .attachments{
-          font-size: 20px;
+          font-size: 25px;
 
           .attachments-list{
             font-size: 16px;
             list-style-type: none;
             .attachment{
               display: block;
+              font-size: 16px;
             }
           }
         }
@@ -221,6 +229,7 @@ span{
             list-style-type: none;
             .link{
               display: block;
+              font-size: 16px;
             }
           }
 
@@ -240,8 +249,8 @@ span{
               }
               .media-header{
                 margin-top:10px;
-                font-size: 16px;
                 text-align: center;
+                font-size: 16px;
               }
 
             }
@@ -250,11 +259,14 @@ span{
       }
     }
     .comments{
-      margin-bottom: 50px;
+      border-top: $color-border;
+      border-top-width: 2px;
+      border-top-style: solid;
       .comments-header{
+          padding: 60px;
           text-align: center;
           font-size: 35px;
-          margin-bottom: 40px;
+          margin: 0;
       }
       .comment{
         width: 90%;
@@ -275,7 +287,7 @@ span{
         .comment-insides{
           background: $color-comment;
           .comment-info{
-            border-bottom-color: #D8D8D8;
+            border-bottom-color: $color-border;
             border-bottom-width: 1px;
             border-bottom-style: solid;
             margin-left: 10px;
