Search page basic structure

--- a/css/common.css
+++ b/css/common.css
@@ -214,10 +214,7 @@ p, li {
     font-size: 35px !important; }
 
   .contrast h4 {
-    font-size: 20px !important; }
-
-  .input-group-btn a.button {
-    padding: 0; } }
+    font-size: 20px !important; } }
 .xs-input {
   height: 30px; }
 
