--- a/css/common.scss
+++ b/css/common.scss
@@ -269,7 +269,8 @@ p, li {
       font-size: 20px !important; }
 
     .input-group-btn a.button {
-      padding: 0; }
+
+      }
     }
 
 .xs-input{
