--- a/css/search.scss
+++ b/css/search.scss
@@ -21,7 +21,7 @@
 
 .menu{
   list-style-type: none;
-  margin-top: 40px;
+  margin-top: 105px;
   .menu-item{
     font-size: 20px;
     font-family: $font-geo;
@@ -89,6 +89,11 @@
 .btn-load{
   display:block;
   text-align:center;
+}
+
+.hashtag-params{
+  @extend .project-params;
+  margin: 20px auto !important;
 }
 
 @media screen and (max-width: 767px) {
