--- a/css/index.scss
+++ b/css/index.scss
@@ -1,6 +1,6 @@
 @import 'common';
 
-$color-panel: #336E7B;
+$color-panel: #6895A0;
 
 .carousel {
   max-height: 800px;
@@ -390,17 +390,18 @@ hr{
 }
 
 .panel{
-  border-color: $color-panel;
+  z-index: 30;
+  border-width: 0;
   vertical-align: top;
-  min-width: 250px;
-  max-width: 240px;
+  min-width: 300px;
+  max-width: 300px;
   margin: 0 auto;
   padding: 0;
   float: none;
-  display: inline-block;
+  display: block;
   text-align:left;
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   margin-right: 10px;
   border-radius: 0;
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
@@ -422,7 +423,7 @@ hr{
   .panel-body{
     padding: 0;
     width: 100%;
-
+    text-align:center;
     .image-container{
       margin-bottom:10px;
       width: 100%;
