--- a/css/search.css
+++ b/css/search.css
@@ -551,13 +551,14 @@ hr {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important; }
   .panel .panel-heading {
     border-radius: 0;
-    text-align: center;
-    background-color: #6895A0; }
+    text-align: center; }
     .panel .panel-heading .panel-title a {
-      color: white;
+      color: #3F3F3F;
       text-decoration: none !important;
-      font-weight: 300;
-      font-family: Geomanist; }
+      font-weight: 500;
+      font-size: 18px;
+      display: block;
+      font-family: 'Helvetica'; }
   .panel .panel-body {
     padding: 0;
     width: 100%;
