--- a/css/index.css
+++ b/css/index.css
@@ -84,10 +84,14 @@ a:hover {
 
 #nav.affix {
   position: fixed;
-  background-color: #34495E;
+  background-color: white;
   -webkit-transition: all .6s ease-in-out; }
-  #nav.affix .container-fluid #bs-example-navbar-collapse-1 .navbar-nav li.dropdown ul.dropdown-menu {
-    background-color: #34495E; }
+  #nav.affix .container-fluid .navbar-brand .brand-name {
+    color: #3F3F3F !important; }
+  #nav.affix .container-fluid #bs-example-navbar-collapse-1 .navbar-nav li a {
+    color: #3F3F3F !important; }
+  #nav.affix .container-fluid #bs-example-navbar-collapse-1 .navbar-nav li ul.dropdown-menu {
+    background-color: white; }
 
 footer {
   text-align: center;
@@ -224,6 +228,15 @@ p, li {
 input.xs-input {
   border-radius: 0px !important;
   -webkit-appearance: none !important; }
+
+.centered {
+  text-align: center; }
+
+.margined {
+  margin: 10px 0px 10px 0px; }
+
+.paddinged {
+  padding: 20px 0px 20px 0px; }
 
 .carousel {
   max-height: 800px;
@@ -551,9 +564,10 @@ hr {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important; }
   .panel .panel-heading {
     border-radius: 0;
-    text-align: center; }
+    text-align: center;
+    background-color: #6895A0; }
     .panel .panel-heading .panel-title a {
-      color: #3F3F3F;
+      color: white;
       text-decoration: none !important;
       font-weight: 500;
       font-size: 18px;
