--- a/css/project.css
+++ b/css/project.css
@@ -84,10 +84,14 @@ a:hover {
 
 #nav.affix {
   position: fixed;
-  background-color: #34495E;
+  background-color: white;
   -webkit-transition: all .6s ease-in-out; }
-  #nav.affix .container-fluid #bs-example-navbar-collapse-1 .navbar-nav li.dropdown ul.dropdown-menu {
-    background-color: #34495E; }
+  #nav.affix .container-fluid .navbar-brand .brand-name {
+    color: #3F3F3F !important; }
+  #nav.affix .container-fluid #bs-example-navbar-collapse-1 .navbar-nav li a {
+    color: #3F3F3F !important; }
+  #nav.affix .container-fluid #bs-example-navbar-collapse-1 .navbar-nav li ul.dropdown-menu {
+    background-color: white; }
 
 footer {
   text-align: center;
@@ -225,6 +229,15 @@ input.xs-input {
   border-radius: 0px !important;
   -webkit-appearance: none !important; }
 
+.centered {
+  text-align: center; }
+
+.margined {
+  margin: 10px 0px 10px 0px; }
+
+.paddinged {
+  padding: 20px 0px 20px 0px; }
+
 body {
   width: 100% !important;
   background-color: #336E7B !important; }
@@ -233,7 +246,10 @@ span {
   color: #747474; }
 
 #nav.affix {
-  position: relative; }
+  position: relative;
+  -webkit-box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.15); }
 
 .content-wrapper {
   overflow: hidden;
