--- a/css/project.scss
+++ b/css/project.scss
@@ -21,6 +21,9 @@ span{
 
 #nav.affix{
   position: relative;
+  -webkit-box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.15);
+  -moz-box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.15);
+  box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.15);
 }
 
 .content-wrapper{
