--- a/css/search.scss
+++ b/css/search.scss
@@ -2,6 +2,9 @@
 
 #nav.affix{
   position: relative;
+  -webkit-box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.15);
+  -moz-box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.15);
+  box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.15);
 }
 
 .content-wrapper{
