Changed panels style, added 'about' page.

--- a/css/common.scss
+++ b/css/common.scss
@@ -11,6 +11,7 @@ $color-active: #B8807F;
 $color-main-hover: #3F3F3F;
 $color-unactive: #827878;
 $color-navbar: #34495E;
+$color-smoothe: #5f5f5f;
 
 html, body, label{
   font-family: $font-geo !important;
@@ -286,6 +287,7 @@ p, li {
 
 .xs-input{
   height: 30px;
+  font-size: 16px;
 }
 
 .footer-content{
