--- a/css/about.css
+++ b/css/about.css
@@ -239,4 +239,23 @@ input.xs-input {
 .paddinged {
   padding: 20px 0px 20px 0px; }
 
-/*# sourceMappingURL=common.css.map */
+#nav.affix {
+  position: relative;
+  -webkit-box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.15); }
+
+body {
+  color: #5f5f5f;
+  font-family: "Raleway", sans-serif; }
+  body .tagline {
+    margin: 60px; }
+  body .container {
+    margin-top: 50px; }
+  body .img-responsive {
+    display: block;
+    margin: 0 auto; }
+  body footer {
+    margin-top: 110px; }
+
+/*# sourceMappingURL=about.css.map */
