--- a/css/index.scss
+++ b/css/index.scss
@@ -409,6 +409,13 @@ hr{
     border-radius: 0;
     text-align: center;
     background-color: $color-panel;
+    position:absolute;
+    z-index:40;
+    width:100%;
+    opacity: 0.95;
+    -webkit-box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.15);
+    -moz-box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.15);
+    box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.15);
     .panel-title{
       a{
         color: white;
@@ -434,6 +441,12 @@ hr{
         img{
           max-width: 100%;
           max-height: 180px;
+          -webkit-filter: opacity(.7);
+          filter: opacity(.7);
+        }
+        img:hover{
+          -webkit-filter: opacity(1);
+          filter: opacity(1);
         }
       }
     }
@@ -464,6 +477,7 @@ hr{
       }
       .progress-header{
         text-align:center;
+        margin:0;
 
       }
       .progress{
