--- a/css/project.css
+++ b/css/project.css
@@ -220,7 +220,8 @@ p, li {
   .contrast h4 {
     font-size: 20px !important; } }
 .xs-input {
-  height: 30px; }
+  height: 30px;
+  font-size: 16px; }
 
 .footer-content {
   display: inline-block; }
